--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Release version: #{release}
+  p This blog is running on the host: #{version}
+
