--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,16 @@
 extends layout
 
 block content
-	h1= title
-	h3 Release version
-	p #{release}
-	<br>
-	h3 Host config
-	p #{version}
+  h1= title
+
+  h3 Run mode
+  p #{runMode}
+  <hr>
+  h3 Region
+  p #{region}
+  <hr>
+  h3 Release version
+  p #{release}
+  <hr>
+  h3 Host config
+  p #{version}
